# serin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: code-reviewer.md  devops-engineer.md  python-engineer.md  security-reviewer.md  tech-lead.md  ui-engineer.md
.claude/chat/: eng-53-scaffolding.md  eng-54-envelope.md  eng-55-jcs.md  eng-57-msgctl-append.md  eng-58-projection.md  eng-59-rebuild.md  eng-60-verify.md  eng-61-equivalence-gate.md  eng-63-server-scaffold.md  eng-64-auth.md  eng-65-streams.md  eng-66-upload.md  eng-68-websocket.md  eng-69-server-projection.md  eng-70-msgctl-remote.md  eng-75-web-scaffold.md  eng-76-ts-core.md  eng-77-worker-foundation.md  eng-78-web-auth.md  eng-81-outbox-optimistic-send.md  eng-83-acceptance-architecture.md
.claude/skills/do-work/: SKILL.md
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/msgctl/: append.py  cli.py  client.py  credentials.py  errors.py  outbox.py  projection.py  rebuild.py  remote.py  sync.py  verify.py  workspace.py
cli/tests/: _e2e_server.py  conftest.py  test_cli.py  test_client.py  test_concurrency.py  test_credentials.py  test_dogfood_scale.py  test_equivalence_gate.py  test_export_e2e.py  test_idempotency.py  test_import_e2e.py  test_init.py  test_login_reconcile_e2e.py  test_m1_exit_gate.py  test_m4_exit_gate.py  test_m5_exit_gate.py  test_outbox.py  test_projection.py  test_projection_determinism.py  test_rebuild.py  test_remote_e2e.py  test_remote_sync.py  test_scan_integrity.py  test_send.py  test_sequencing.py  test_torn_write.py  test_verify.py  test_ws_bearer_e2e.py  verify_helpers.py
desktop/: README.md
desktop/src-tauri/capabilities/: default.json
docs/: deploy.md  design-doc.md  plugins.md  tech-lead-assessment.md  technical-design.md
docs/schemas/: bot.installed.v1.schema.json  bot.removed.v1.schema.json  channel.archived.v1.schema.json  channel.created.v1.schema.json  channel.member_added.v1.schema.json  channel.member_removed.v1.schema.json  channel.renamed.v1.schema.json  dm.created.v1.schema.json  envelope.schema.json  file.uploaded.v1.schema.json  message.created.v1.schema.json  user.joined.v1.schema.json  user.left.v1.schema.json  user.profile_updated.v1.schema.json  workspace.created.v1.schema.json  workspace.updated.v1.schema.json
plugins/: README.md
plugins/examples/: echo_bot.py
plugins/github_notifier/: pyproject.toml
plugins/github_notifier/github_notifier/: __init__.py  __main__.py  config.py  dedupe.py  formatting.py  notifier.py  server.py  signature.py
plugins/github_notifier/testdata/: pull_request.closed_merged.json  pull_request.opened.json  pull_request.review_requested.json
plugins/github_notifier/tests/: test_github_notifier.py  test_notifier_isolation.py
plugins/msg_sdk/tests/: test_sdk_e2e.py
plugins/serin_sdk/: pyproject.toml
plugins/serin_sdk/serin_sdk/: __init__.py  client.py  errors.py  hashing.py  ids.py  jcs.py  models.py
plugins/serin_sdk/tests/: test_sdk_client_unit.py  test_sdk_e2e.py  test_sdk_hashing_vectors.py  test_sdk_ids.py  test_sdk_isolation.py
server/: alembic.ini  docker-entrypoint.sh  pyproject.toml
server/msgd/: logging.py  settings.py
server/msgd/api/: __init__.py  app.py  deps.py  problems.py  spa.py
server/msgd/api/routers/: __init__.py  admin.py  auth.py  avatars.py  events_read.py  events_upload.py  files.py  health.py  me.py  plugins.py  prefs.py  read_state.py  search.py  sync.py  workspace_icon.py
server/msgd/api/schemas/: __init__.py  admin.py  auth.py  events.py  events_read.py  files.py  me.py  plugins.py  prefs.py  read_state.py  search.py
server/msgd/auth/: __init__.py  bot_tokens.py  context.py  passwords.py  ratelimit.py  sessions.py  tokens.py
server/msgd/blobs/: __init__.py  store.py  thumbnails.py
server/msgd/core/: __init__.py  envelope.py  hashing.py  ids.py  jcs.py  time.py
server/msgd/core/payloads/: __init__.py  file.py  message.py  meta.py
server/msgd/core/testdata/: vectors.json
server/msgd/db/: __init__.py  base.py  engine.py  migrate.py  models.py
server/msgd/db/migrations/: env.py
server/msgd/db/migrations/versions/: 0001_initial_schema.py  0002_auth_indexes.py  0003_reactions_proj.py  0005_files_present.py  0006_files_thumbnail_sha256.py  0007_prefs.py  0008_bot_tokens.py  0009_incoming_webhooks.py  0010_user_profile_fields.py  0011_workspace_description.py  0012_user_avatar.py  0013_workspace_icon.py
server/msgd/events/: __init__.py  emit.py  fanout.py  insert.py  permissions.py  reducers.py  validate.py  write.py
server/msgd/export/: __init__.py  bundle.py  restore.py
server/msgd/plugins/: __init__.py  hooks.py
server/msgd/projections/: __init__.py  apply.py  dump.py  rebuild.py
server/msgd/ws/: __init__.py  frames.py  hub.py  registry.py  router.py
server/tests/: authutil.py  conftest.py  eventsutil.py  generate_schemas.py  generate_vectors.py  harness.py  test_admin_members.py  test_admin_workspace.py  test_auth_context.py  test_auth_errors.py  test_avatars.py  test_blobs.py  test_docs_gating.py  test_envelope.py  test_equivalence_gate_server.py  test_events_batch.py  test_events_batch_concurrency.py  test_events_pull.py  test_events_validate.py  test_export.py  test_files.py  test_harness.py  test_hashing.py  test_healthz.py  test_hooks.py  test_ids.py  test_import.py  test_insert_event.py  test_invites.py  test_jcs.py  test_login.py  test_me.py  test_meta_payloads.py  test_migrations.py  test_no_secrets_in_logs.py  test_payloads.py  test_permissions.py  test_plugins.py  test_prefs.py  test_presence_typing.py  (+19 more)
server/tests/data/: eng54_envelope_example.json
server/tests/simulation/: __init__.py  client.py  invariants.py  runner.py  setup.py  strategies.py  test_mutation.py  test_simulation.py
web/: .gitignore  eslint.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: main.ts  style.css
web/src/components/: HelloWorld.vue
web/src/composables/: useAttachments.ts  (+10 more)
(+270 files in other folders)
