[project]
name = "msg-workspace"
version = "0"
requires-python = ">=3.12"
dependencies = ["msgd", "msgctl"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["server", "cli"]

[tool.uv.sources]
msgd = { workspace = true }
msgctl = { workspace = true }

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["server/msgd", "server/tests", "cli/msgctl", "cli/tests"]

[tool.pytest.ini_options]
testpaths = ["server/tests", "cli/tests"]
addopts = "-q"
