[project]
name = "msg-workspace"
version = "0"
requires-python = ">=3.12"
dependencies = ["msgd", "msgctl", "github-notifier", "msg-sdk"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["server", "cli", "plugins/github_notifier", "plugins/msg_sdk"]

[tool.uv.sources]
msgd = { workspace = true }
msgctl = { workspace = true }
github-notifier = { workspace = true }
msg-sdk = { workspace = true }

[dependency-groups]
# httpx drives the in-process ASGI test client; testcontainers runs the
# ephemeral Postgres for server integration tests; pytest-asyncio runs the
# async fixtures/tests. Dev-only — these never ship.
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "hypothesis>=6.100",
    "httpx",
    "httpx-ws",
    "testcontainers[postgres]",
    "pytest-asyncio",
    # msg_sdk's live event stream (and its e2e test) use the `websockets`
    # package; pinned here as a dev dep so the SDK's [ws] extra resolves for tests
    # without adding it to the base install.
    "websockets>=13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = [
    "server/msgd",
    "server/tests",
    "cli/msgctl",
    "cli/tests",
    "plugins/github_notifier",
    "plugins/msg_sdk",
]
# server/tests/ and cli/tests/ each hold a top-level `conftest.py`; mypy would
# map both to the module name `conftest` and abort with "duplicate module".
# They cannot be disambiguated by package: making a `tests/` dir a package would
# break the existing sibling imports there (e.g. the M0 schema-freeze test), and
# `explicit_package_bases` double-maps the editable `msgd` distribution. All
# real harness logic lives in server/tests/harness.py (unique module name,
# fully type-checked); only the thin re-export shim conftest.py is excluded.
exclude = ["^server/tests/conftest\\.py$"]

[tool.pytest.ini_options]
testpaths = [
    "server/tests",
    "cli/tests",
    "plugins/github_notifier/tests",
    "plugins/msg_sdk/tests",
]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "integration: needs a Docker daemon (spins an ephemeral Postgres container)",
]
