[project]
name = "msgctl"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["msgd", "httpx"]

[project.scripts]
msgctl = "msgctl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
msgd = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["msgctl"]
