[project]
name = "github-notifier"
version = "0.1.0"
description = "Reference msg plugin: GitHub pull_request webhooks -> a msg incoming webhook"
requires-python = ">=3.12"
# Deliberately EMPTY (D12): the reference plugin is a black-box HTTP consumer of
# the public API documented in docs/plugins.md — stdlib only, no msgd, no HTTP
# framework. tests/test_notifier_imports.py enforces this structurally.
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["github_notifier"]
