[project]
name = "serin-sdk"
version = "0.1.0"
description = "A small Python bot SDK for the Serin plugin API (docs/plugins.md)"
requires-python = ">=3.12"
# Base install is stdlib-only (urllib for HTTP), public-API-only, no msgd import
# — mirroring plugins/github_notifier. tests/test_isolation.py enforces this
# structurally. The live events() WebSocket stream needs `websockets`, kept as an
# optional extra so the base install stays dependency-light.
dependencies = []

[project.optional-dependencies]
ws = ["websockets>=13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["serin_sdk"]
